@@ -1,5 +1,14 @@
 2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeView.h:
+	* OutlineTreeView.cpp:
+	* TextViewEditable.h:
+	* TextViewEditable.cpp:
+	* OutlineCellRenderer.h:
+	* OutlineCellRenderer.cpp: 
+
+2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TextViewEditable.h:
 	* TextViewEditable.cpp:
 	* OutlineCellRenderer.h:
